--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@prisma/client": "^5.10.0",
+        "@types/nodemailer": "^6.4.17",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
@@ -23,6 +24,7 @@
         "express-validator": "^7.0.1",
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
+        "nodemailer": "^7.0.3",
         "socket.io": "^4.7.4",
         "stripe": "^14.17.0",
         "zod": "^3.22.4"
