--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
         "prisma:studio": "prisma studio",
         "test": "jest",
         "lint": "eslint . --ext .ts",
-        "format": "prettier --write \"src/**/*.ts\""
+        "format": "prettier --write \"src/**/*.ts\"",
+        "stripe:listen": "stripe listen --forward-to localhost:5173/api/webhooks",
+        "stripe:events": "stripe events list",
+        "stripe:login": "stripe login",
+        "stripe:test": "stripe listen --forward-to localhost:5173/api/webhooks --events payment_intent.succeeded,payment_intent.payment_failed,charge.refunded"
     },
     "dependencies": {
         "@prisma/client": "^5.10.0",
