--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
         "@prisma/client": "^5.10.0",
         "@types/nodemailer": "^6.4.17",
         "bcryptjs": "^2.4.3",
+        "cloudinary": "^2.6.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.18.2",
         "express-validator": "^7.0.1",
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0",
         "nodemailer": "^7.0.3",
         "socket.io": "^4.7.4",
         "stripe": "^14.17.0",
