--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "dist/index.js",
     "scripts": {
         "start": "node dist/index.js",
-        "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+        "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/index.ts",
         "build": "tsc",
         "prisma:generate": "prisma generate",
         "prisma:migrate": "prisma migrate dev",
@@ -27,12 +27,16 @@
         "dotenv": "^16.4.5",
         "express": "^4.18.2",
         "express-validator": "^7.0.1",
+        "helmet": "^8.1.0",
         "jsonwebtoken": "^9.0.2",
+        "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
         "multer-storage-cloudinary": "^4.0.0",
         "nodemailer": "^7.0.3",
         "socket.io": "^4.7.4",
         "stripe": "^14.17.0",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.1",
         "zod": "^3.22.4"
     },
     "devDependencies": {
@@ -41,8 +45,11 @@
         "@types/express": "^4.17.21",
         "@types/jest": "^29.5.12",
         "@types/jsonwebtoken": "^9.0.5",
+        "@types/morgan": "^1.9.9",
         "@types/multer": "^1.4.11",
         "@types/node": "^20.11.19",
+        "@types/swagger-jsdoc": "^6.0.4",
+        "@types/swagger-ui-express": "^4.1.8",
         "@typescript-eslint/eslint-plugin": "^7.0.1",
         "@typescript-eslint/parser": "^7.0.1",
         "eslint": "^8.56.0",
@@ -51,6 +58,7 @@
         "prisma": "^5.10.0",
         "ts-jest": "^29.1.2",
         "ts-node-dev": "^2.0.0",
+        "tsconfig-paths": "^4.2.0",
         "typescript": "^5.3.3"
     }
 }
