--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
         "prisma:migrate": "prisma migrate dev",
         "prisma:studio": "prisma studio",
         "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage",
+        "test:ci": "jest --ci --coverage --runInBand",
         "lint": "eslint . --ext .ts",
         "format": "prettier --write \"src/**/*.ts\"",
         "stripe:listen": "stripe listen --forward-to localhost:5173/api/webhooks",
@@ -40,10 +43,11 @@
         "zod": "^3.22.4"
     },
     "devDependencies": {
+        "@jest/globals": "^29.7.0",
         "@types/bcryptjs": "^2.4.6",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
-        "@types/jest": "^29.5.12",
+        "@types/jest": "^29.5.14",
         "@types/jsonwebtoken": "^9.0.5",
         "@types/morgan": "^1.9.9",
         "@types/multer": "^1.4.11",
@@ -56,7 +60,7 @@
         "jest": "^29.7.0",
         "prettier": "^3.2.5",
         "prisma": "^5.10.0",
-        "ts-jest": "^29.1.2",
+        "ts-jest": "^29.3.4",
         "ts-node-dev": "^2.0.0",
         "tsconfig-paths": "^4.2.0",
         "typescript": "^5.3.3"
